added new styles

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Nunito:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 <body>
   <nav class="navbar">
-    <a class="navbar-brand" href="/">Note Taker
-    </a>
+    <a class="navbar-brand" href="/">Note Taker</a>
   </nav>
   <div class="container">
     <div style="margin-top: 80px;" class="jumbotron">
@@ -21,9 +20,9 @@
           <img class="notebook-img" src="assets/images/notebook.jpg" alt="notebook"> 
         </div>
         <div class="col-lg-6 col-sm-12 text-center">
-          <h1 class="display-4 mt-3 ">Note Taker</h1>
+          <h1 class="display-4 mt-5">Note Taker</h1>
           <h4>Take notes with Express</h4>
-          <a class="btn light-green" href="/notes" role="button">Get Started</a>
+          <a class="btn light-green mb-3" href="/notes" role="button">Get Started</a>
         </div>
       </div>
     </div>
